...
                        android:textColorHint="@color/text_secondary"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Begin Quest Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEmailCheckQuest"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/btn_gradient_blue"
                    android:text="@string/begin_quest"
                    android:gravity="center"
...
